Fixed visibility issue with hover on submit button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -327,8 +327,8 @@ nav ul li {
 .submit-btn:hover {
   background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
-  color: var(white);
   cursor: pointer;
+  color: var(--text-color)
 }
 
 footer {
